team-webpage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: team-webpage-service
spec:
  type: LoadBalancer
  selector:
    app: team-webpage
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
