team-webpage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-webpage-ingress
  namespace: team-webpage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: team-webpage
            port:
              number: 8080
